<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="shoeListViewModel"
            type="com.example.android.shoestore.viewModel.ShoeListViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/small_padding"
                android:paddingStart="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/add_shoe_name"
                    style="@style/NewShoeStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/small_padding"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/add_shoe_size"
                    style="@style/NewShoeStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/small_padding"
                    android:text="@string/size" />

                <TextView
                    android:id="@+id/add_shoe_company"
                    style="@style/NewShoeStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/small_padding"
                    android:text="@string/company" />

                <TextView
                    android:id="@+id/add_shoe_description"
                    style="@style/NewShoeStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/small_padding"
                    android:text="@string/description" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/new_shoe_name"
                    style="@style/NewShoeStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/shoe_s_name"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/new_shoe_size"
                    style="@style/NewShoeStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/shoe_s_size"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/new_shoe_company"
                    style="@style/NewShoeStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/shoe_s_company"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/new_shoe_description"
                    style="@style/NewShoeStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="30"
                    android:hint="@string/shoe_s_description"
                    android:inputType="textMultiLine"
                    android:textAlignment="center"
                    android:autofillHints="" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:text="@string/save" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:text="@string/cancel" />

    </LinearLayout>
</layout>