<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/login">
    <fragment
        android:id="@+id/login"
        android:name="com.example.android.shoestore.screens.Login"
        android:label="@string/login_fragment"
        tools:layout="@layout/login_fragment">
        <action
            android:id="@+id/action_login_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
        <argument
            android:name="login"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.example.android.shoestore.screens.WelcomeFragment"
        android:label="@string/welcome_fragment"
        tools:layout="@layout/welcome_fragment">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.example.android.shoestore.screens.InstructionsFragment"
        android:label="@string/instruction_fragment"
        tools:layout="@layout/instructions_fragment">
        <action
            android:id="@+id/action_instructionsFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out"
            app:popUpTo="@id/welcomeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeListFragment"
        android:name="com.example.android.shoestore.screens.ShoeListFragment"
        android:label="@string/shoes_list"
        tools:layout="@layout/shoe_list_fragment">
        <action
            android:id="@+id/action_shoeListFragment_to_shoeDetailsFragment"
            app:destination="@id/shoeDetailsFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out"
            app:popUpTo="@id/welcomeFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_shoeListFragment_to_login"
            app:destination="@id/login"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailsFragment"
        android:name="com.example.android.shoestore.screens.ShoeDetailsFragment"
        android:label="@string/shoe_detail_fragment"/>
</navigation>